--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
+
+
+     <!-- <form>
+        <input type="text" name="" id="" placeholder="Name" onblur="this.style.backgroundColor='red';" onFocus="this.style.backgroundColor='yellow';">
+        <input onkeyup="this.style.backgroundColor='brown'" onkeydown="this.style.backgroundColor='green'"  type="password" name="" id="" placeholder="Password">
+        <input type="checkbox" name="" id="">
+        <input type="datetime-local" name="" id="">
+        <input type="color" name="" id="">
+        <textarea name="" id="" cols="40" rows="20"></textarea>
+    </form> -->
+
+
+    <!-- <button onclick="demo()">Click ME</button> -->
+
+    <!-- <h1  onmouseover="this.style.backgroundColor='yellow';" onmouseleave="this.style.backgroundColor='red';">Hello</h1> -->
+    <!-- <h1 onmouseleave="my_mouse()">Hello</h1> -->
+    <!-- <h1 onmouseout="my_mouse()">Hello</h1> -->
+
+    <!-- <img width="100px" 
+    
+    
+    src="https://www.citypng.com/public/uploads/preview/hd-light-bulb-on-off-png-31626305624ofqq78jchu.png" 
+    onMouseout="src='https://www.citypng.com/public/uploads/preview/hd-light-bulb-on-off-png-31626305624ofqq78jchu.png'"
+    onMouseover="src='https://cdn.mos.cms.futurecdn.net/HaPnm6P7TZhPQGGUxtDjAg-320-80.jpg'"> -->
+
+
+    <!-- <form> -->
+        <input type="email" name="email" id="email" required>
+        <input type="password" name="password" id="password" required>
+        <!-- <input type="text" id="country_code" name="country_code" pattern="[a-z]{3}" title="Three letter country code" required> -->
+        <!-- <input type="submit" value="Login"> -->
+        <button onclick="loginUSer()">Login</button>
+    <!-- </form> -->
+
   
 
  
